alignment corrected

--- a/assets/css/News-Cards.css
+++ b/assets/css/News-Cards.css
@@ -110,7 +110,7 @@ img {
 }
 
 img {
-  border-radius: 41px;
-  margin: 0px 0px 0px 290px;
+  border-radius: 0px;
+  margin: 0px 0px 0px 0px;
 }
 
